--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@
 }
 
 .logo {
-  background-color: rgb(150, 40, 150);
+  background-color: purple;
   display: flex;
   align-items: center;
   padding: 0 0.5em;
@@ -28,6 +28,14 @@ li {
   margin: 10px;
   padding: 10px;
   font-weight: bold;
+}
+
+a {
+    text-decoration: none;
+}
+
+a:visited{
+    color: white;
 }
 
 .search-bar {
