--- a/style.css
+++ b/style.css
@@ -10,9 +10,12 @@
   background-color: purple;
   display: flex;
   align-items: center;
+  height: 100%;
+}
+
+h1 {
+  font-size: 36px;
   padding: 0 0.5em;
-  font-size: 28px;
-  height: 100px;
 }
 
 .nav-links {
